--- a/_config.yml
+++ b/_config.yml
@@ -99,13 +99,13 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-theme: apollo 
+theme: cactus-light 
 
-archive_generator:
-    per_page: 0
-    yearly: false
-    monthly: false
-    daily: false
+# archive_generator:
+#     per_page: 0
+#     yearly: false
+#     monthly: false
+#     daily: false
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
