--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -188,8 +188,8 @@ utterances:
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
 google_analytics:
-  enabled: false
-  id: UA-86660611-1
+  enabled: true 
+  id: G-B24J5DZWNJ 
 
 # Fill in your Baidu Analytics tracking ID to enable Baidu Analytics.
 baidu_analytics:
